--- a/course-02/exercises/udacity-c2-restapi/package.json
+++ b/course-02/exercises/udacity-c2-restapi/package.json
@@ -19,6 +19,7 @@
         "@types/bcrypt": "^3.0.0",
         "@types/jsonwebtoken": "^8.3.2",
         "aws-sdk": "^2.492.0",
+        "axios": "^0.27.2",
         "bcrypt": "^5.0.0",
         "body-parser": "^1.19.0",
         "email-validator": "^2.0.4",
